Finalizando funcionalidade filtro nesse fluxos adicionando ativo